fix: namespace trailing slash and lab numbering typos in 09-AgentCore-E2E (#903)
* fix: remove trailing slashes from namespaces and fix lab numbering typo

* chore: add Traci Lim (longwind48) to CONTRIBUTORS.md

---------

Co-authored-by: longwind48 <tracilim@amazon.com>

--- a/01-tutorials/09-AgentCore-E2E/lab-02-agentcore-memory.ipynb
+++ b/01-tutorials/09-AgentCore-E2E/lab-02-agentcore-memory.ipynb
@@ -100,8 +100,8 @@
     "   - **USER_PREFERENCE**: Learns customer preferences, behaviors, and patterns\n",
     "   - **SEMANTIC**: Stores factual information using vector embeddings for similarity search\n",
     "4. **Namespaces**: Logical grouping of memories by customer and context type. We'll create these two namespaces:\n",
-    "- `support/customer/{actorId}/preferences/`: Customer preferences and behavioral patterns\n",
-    "- `support/customer/{actorId}/semantic/`: Factual information and conversation history\n",
+    "- `support/customer/{actorId}/preferences`: Customer preferences and behavioral patterns\n",
+    "- `support/customer/{actorId}/semantic`: Factual information and conversation history\n",
     "\n",
     "This structure enables multi-tenant memory where each customer's information is isolated and easily retrievable.\n",
     "\n",
@@ -126,14 +126,14 @@
     "                    StrategyType.USER_PREFERENCE.value: {\n",
     "                        \"name\": \"CustomerPreferences\",\n",
     "                        \"description\": \"Captures customer preferences and behavior\",\n",
-    "                        \"namespaces\": [\"support/customer/{actorId}/preferences/\"],\n",
+    "                        \"namespaces\": [\"support/customer/{actorId}/preferences\"],\n",
     "                    }\n",
     "                },\n",
     "                {\n",
     "                    StrategyType.SEMANTIC.value: {\n",
     "                        \"name\": \"CustomerSupportSemantic\",\n",
     "                        \"description\": \"Stores facts from conversations\",\n",
-    "                        \"namespaces\": [\"support/customer/{actorId}/semantic/\"],\n",
+    "                        \"namespaces\": [\"support/customer/{actorId}/semantic\"],\n",
     "                    }\n",
     "                },\n",
     "            ]\n",
