(01-tutorials): Added MCP Client - Boto3 Approach (#927)
Co-authored-by: ezzara <ezzara@amazon.fi>

--- a/01-tutorials/01-AgentCore-runtime/02-hosting-MCP-server/hosting_mcp_server_iam_auth.ipynb
+++ b/01-tutorials/01-AgentCore-runtime/02-hosting-MCP-server/hosting_mcp_server_iam_auth.ipynb
@@ -770,6 +770,287 @@
   },
   {
    "cell_type": "markdown",
+   "id": "e235905c",
+   "metadata": {},
+   "source": [
+    "## Testing remote MCP server - Boto3 Approach "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1618b79c",
+   "metadata": {},
+   "source": [
+    "This section demonstrates an alternative approach to testing the deployed MCP server using the Boto3 SDK's `invoke_agent_runtime` API. The SDK handles AWS SigV4 request signing automatically, simplifying IAM authentication for runtime invocations"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "35f99035",
+   "metadata": {},
+   "source": [
+    "### Create Remote Testing Client - Boto3\n",
+    "\n",
+    "Let's create a client to test our deployed MCP server using the Boto3 API: "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "63acdd8f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%writefile mcp_client_remote_boto3.py   \n",
+    "\n",
+    "import boto3\n",
+    "import json\n",
+    "import traceback\n",
+    "from boto3.session import Session\n",
+    "from botocore.exceptions import ClientError\n",
+    "\n",
+    "boto_session = Session()\n",
+    "region = boto_session.region_name\n",
+    "print(f\"Using AWS region: {region}\")\n",
+    "\n",
+    "# Initialize the Bedrock AgentCore and SSM client\n",
+    "client = boto3.client('bedrock-agentcore', region_name=region)\n",
+    "ssm_client = boto3.client(\"ssm\", region_name=region)\n",
+    "\n",
+    "\n",
+    "agent_arn_response = ssm_client.get_parameter(\n",
+    "        Name=\"/mcp_server/runtime_iam/agent_arn\"\n",
+    ")\n",
+    "\n",
+    "runtime_arn = agent_arn_response[\"Parameter\"][\"Value\"]\n",
+    "\n",
+    "print(f\"Retrieved Agent ARN: {runtime_arn}\")\n",
+    "\n",
+    "if not runtime_arn:\n",
+    "        print(\"❌ Error: AGENT_ARN not found\")\n",
+    "        sys.exit(1)\n",
+    "        \n",
+    "def call_mcp(method, params=None):\n",
+    "    \"\"\"\n",
+    "    Call an MCP method on the agent runtime.\n",
+    "    \n",
+    "    Args:\n",
+    "        method: The MCP method to call (e.g., 'tools/list', 'tools/call')\n",
+    "        params: Optional parameters for the method\n",
+    "    \n",
+    "    Returns:\n",
+    "        The result from the MCP response\n",
+    "    \"\"\"\n",
+    "    if params is None:\n",
+    "        params = {}\n",
+    "\n",
+    "    payload = json.dumps({\n",
+    "        \"jsonrpc\": \"2.0\",\n",
+    "        \"id\": 1,\n",
+    "        \"method\": method,\n",
+    "        \"params\": params\n",
+    "    }).encode()\n",
+    "\n",
+    "    try:\n",
+    "        response = client.invoke_agent_runtime(\n",
+    "            agentRuntimeArn=runtime_arn,\n",
+    "            payload=payload,\n",
+    "            qualifier='DEFAULT',\n",
+    "            contentType='application/json',\n",
+    "            accept='application/json, text/event-stream'\n",
+    "        )\n",
+    "\n",
+    "        raw = response['response'].read().decode()\n",
+    "        json_data = json.loads(raw[raw.find('{'):])\n",
+    "        return json_data['result']\n",
+    "\n",
+    "    except ClientError as e:\n",
+    "        print(f\"\\n{'=' * 60}\")\n",
+    "        print(\"Error Response:\")\n",
+    "        print(json.dumps(e.response, indent=2, default=str))\n",
+    "        print(f\"{'=' * 60}\\n\")\n",
+    "        raise\n",
+    "\n",
+    "\n",
+    "def main():\n",
+    "\n",
+    "    try:\n",
+    "        # List available tools\n",
+    "        print(\"📋 Available MCP Tools:\")\n",
+    "        print(\"=\" * 50)\n",
+    "        \n",
+    "        tools_result = call_mcp(\"tools/list\")\n",
+    "        tools = tools_result['tools']\n",
+    "        \n",
+    "        for tool in tools:\n",
+    "            params = list(tool.get('inputSchema', {}).get('properties', {}).keys())\n",
+    "            print(f\"🔧 {tool['name']}\")\n",
+    "            print(f\"   Description: {tool['description']}\")\n",
+    "            print(f\"   Parameters: {params}\")\n",
+    "            print()\n",
+    "        \n",
+    "        print(f\"✅ Successfully connected to MCP server!\")\n",
+    "        print(f\"Found {len(tools)} tools available.\")\n",
+    "\n",
+    "    except Exception as e:\n",
+    "        print(f\"❌ Error connecting to MCP server: {e}\")\n",
+    "        import traceback\n",
+    "\n",
+    "        print(\"\\n🔍 Full error traceback:\")\n",
+    "        traceback.print_exc()\n",
+    "        sys.exit(1)\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    main()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3eceb285",
+   "metadata": {},
+   "source": [
+    "### Testing Your Deployed MCP Server\n",
+    "\n",
+    "Let's test our deployed MCP server using the remote client:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "67a99db0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"Testing deployed MCP server...\")\n",
+    "print(\"=\" * 50)\n",
+    "!python mcp_client_remote_boto3.py"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b9c4f071",
+   "metadata": {},
+   "source": [
+    "### Invoke MCP Tools - Boto3\n",
+    "\n",
+    "Let's now use the boto3 SDK to create a client that not only lists tools but also invokes them:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d87cff03",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%writefile invoke_mcp_tools_boto3.py\n",
+    "\n",
+    "import boto3\n",
+    "import json\n",
+    "import logging\n",
+    "from boto3.session import Session\n",
+    "from botocore.exceptions import ClientError\n",
+    "\n",
+    "boto_session = Session()\n",
+    "region = boto_session.region_name\n",
+    "client = boto3.client('bedrock-agentcore', region_name=region)\n",
+    "\n",
+    "ssm_client = boto3.client(\"ssm\", region_name=region)\n",
+    "agent_arn_response = ssm_client.get_parameter(Name=\"/mcp_server/runtime_iam/agent_arn\")\n",
+    "runtime_arn = agent_arn_response[\"Parameter\"][\"Value\"]\n",
+    "\n",
+    "def call_mcp(method, params=None):\n",
+    "    if params is None:\n",
+    "        params = {}\n",
+    "    payload = json.dumps({\n",
+    "        \"jsonrpc\": \"2.0\",\n",
+    "        \"id\": 1,\n",
+    "        \"method\": method,\n",
+    "        \"params\": params\n",
+    "    }).encode()\n",
+    "    try:\n",
+    "        response = client.invoke_agent_runtime(\n",
+    "            agentRuntimeArn=runtime_arn,\n",
+    "            payload=payload,\n",
+    "            qualifier='DEFAULT',\n",
+    "            contentType='application/json',\n",
+    "            accept='application/json, text/event-stream'\n",
+    "        )\n",
+    "        raw = response['response'].read().decode()\n",
+    "        json_data = json.loads(raw[raw.find('{'):])\n",
+    "        return json_data['result']\n",
+    "    except ClientError as e:\n",
+    "        print(f\"❌ Error: {e}\")\n",
+    "        raise\n",
+    "\n",
+    "def main():\n",
+    "    \n",
+    "    print(f\"Using AWS region: {region}\")\n",
+    "    print(f\"Retrieved Agent ARN: {runtime_arn}\")\n",
+    "\n",
+    "\n",
+    "    print(\"\\n🔄 Listing available tools...\")\n",
+    "    try: \n",
+    "        tools_result = call_mcp(\"tools/list\")\n",
+    "\n",
+    "        print(\"\\n📋 Available MCP Tools:\")\n",
+    "        print(\"=\" * 50)\n",
+    "        for tool in tools_result['tools']:\n",
+    "            print(f\"🔧 {tool['name']}: {tool['description']}\")\n",
+    "\n",
+    "        print(\"\\n🧪 Testing MCP Tools:\")\n",
+    "        print(\"=\" * 50)\n",
+    "\n",
+    "        print(\"\\n➕ Testing add_numbers(5, 3)...\")\n",
+    "        add_result = call_mcp(\"tools/call\", {\"name\": \"add_numbers\", \"arguments\": {\"a\": 5, \"b\": 3}})\n",
+    "        print(f\"   Result: {add_result['structuredContent']}\")\n",
+    "\n",
+    "        print(\"\\n✖️  Testing multiply_numbers(4, 7)...\")\n",
+    "        multiply_result = call_mcp(\"tools/call\", {\"name\": \"multiply_numbers\", \"arguments\": {\"a\": 4, \"b\": 7}})\n",
+    "        print(f\"   Result: {multiply_result['structuredContent']}\")\n",
+    "\n",
+    "        print(\"\\n👋 Testing greet_user('Alice')...\")\n",
+    "        greet_result = call_mcp(\"tools/call\", {\"name\": \"greet_user\", \"arguments\": {\"name\": \"Alice\"}})\n",
+    "        print(f\"   Result: {greet_result['structuredContent']}\")\n",
+    "\n",
+    "        print(\"\\n✅ MCP tool testing completed!\")\n",
+    "\n",
+    "    except Exception as e:\n",
+    "        print(f\"❌ Error connecting to MCP server: {e}\")\n",
+    "        import traceback\n",
+    "\n",
+    "        print(\"\\n🔍 Full error traceback:\")\n",
+    "        traceback.print_exc()\n",
+    "        sys.exit(1)\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    main()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f41d85b3",
+   "metadata": {},
+   "source": [
+    "### Test Tool Invocation\n",
+    "\n",
+    "Let's test our MCP tools by invoking our newly created client:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2758fa87",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"Testing MCP tool invocation...\")\n",
+    "print(\"=\" * 50)\n",
+    "!python invoke_mcp_tools_boto3.py"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "next_steps",
    "metadata": {},
    "source": [
